--- a/css/styles.css
+++ b/css/styles.css
@@ -780,7 +780,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .summary-card {
     padding: 3rem;
-    max-width: 900px;
+    /* max-width: 900px; */
     width: 100%;
 }
 
